Libraries/GTK/src/gtkextra/gtkplot3d.h

typedef struct _GtkPlot3D		GtkPlot3D;
typedef enum
{
  GTK_PLOT_SIDE_XY	= 1 << 0 ,
  GTK_PLOT_SIDE_XZ	= 1 << 1 ,
  GTK_PLOT_SIDE_YX	= 1 << 2 ,
  GTK_PLOT_SIDE_YZ	= 1 << 3 ,
  GTK_PLOT_SIDE_ZX	= 1 << 4 ,
  GTK_PLOT_SIDE_ZY	= 1 << 5 ,
} GtkPlotSide;
GtkWidget*	gtk_plot3d_new			(GdkDrawable *drawable);
GtkWidget*	gtk_plot3d_new_with_size	(GdkDrawable *drawable,
                                                 gdouble width, gdouble height);
void		gtk_plot3d_autoscale		(GtkPlot3D *plot);
void		gtk_plot3d_corner_set_visible	(GtkPlot3D *plot,
						 gboolean visible);
gboolean	gtk_plot3d_corner_visible	(GtkPlot3D *plot);
void            gtk_plot3d_corner_set_attributes(GtkPlot3D *plot,
						 GtkPlotLineStyle style,
						 gfloat width,
                                                 const GdkColor *color);
void            gtk_plot3d_corner_get_attributes(GtkPlot3D *plot,
                                                 GtkPlotLineStyle *style,
                                                 gfloat *width,
                                                 GdkColor *color);
void            gtk_plot3d_frame_set_attributes	(GtkPlot3D *plot,
                                                 GtkPlotLineStyle style,
                                                 gfloat width,
                                                 const GdkColor *color);
void            gtk_plot3d_frame_get_attributes	(GtkPlot3D *plot,
                                                 GtkPlotLineStyle *style,
                                                 gfloat *width,
                                                 GdkColor *color);
/* Axes */
GtkPlotAxis *	gtk_plot3d_get_axis		(GtkPlot3D *plot,
						 GtkPlotOrientation orientation);
void		gtk_plot3d_show_labels		(GtkPlot3D *plot,
                                                 GtkPlotSide side,
						 gint label_mask);
void		gtk_plot3d_show_title		(GtkPlot3D *plot,
                                                 GtkPlotSide side);
void		gtk_plot3d_hide_title		(GtkPlot3D *plot,
                                                 GtkPlotSide side);
void 		gtk_plot3d_set_ticks       	(GtkPlot3D *plot,
						 GtkPlotOrientation axis,
                                 		 gdouble major_step,
                                 		 gint nminor);
void 		gtk_plot3d_set_major_ticks 	(GtkPlot3D *plot,
						 GtkPlotOrientation axis,
                                 		 gdouble major_step);
void 		gtk_plot3d_set_minor_ticks 	(GtkPlot3D *plot,
						 GtkPlotOrientation axis,
                                 		 gint nminor);
void            gtk_plot3d_set_ticks_length	(GtkPlot3D *plot,
                                                 GtkPlotOrientation axis,
                                                 gint length);
void            gtk_plot3d_set_ticks_width 	(GtkPlot3D *plot,
                                                 GtkPlotOrientation axis,
                                                 gfloat width);
void            gtk_plot3d_show_ticks      	(GtkPlot3D *plot,
                                                 GtkPlotSide side,
                                                 gint major_mask,
                                                 gint minor_mask);